# srtool

./: .gitignore  pyproject.toml
configs/: train_task.yaml
configs/training_args/optimiser/: adamw.yaml  sgd.yaml
configs/training_args/scheduler/: one_cycle.yaml
notebooks/: demo.ipynb
srtool/: utils.py
srtool/cli/: train.py
srtool/data/: audio_dataset.py
srtool/metrics/: __init__.py  eer.py
srtool/models/: __init__.py  sr_modeling.py
srtool/train/: __init__.py  trainer.py
